<resources>
    <string name="app_name">OverTime</string>
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_yes">예</string>
    <string name="common_no">아니오</string>
    <string name="common_update">수정</string>
    <string name="common_delete">삭제</string>

    <string name="write_button_ok_text">글 작성하기</string>
    <string name="write_content_hint">내용을 입력해주세요.</string>
    <string name="write_content_error">1글자 이상 입력하세요.</string>
    <string name="write_img_label">사진을 올려주세요.</string>

    <string name="timeline_modify_dialog_title">타임라인 수정하기</string>
    <string name="timeline_modify_dialog_message">타임라인을 수정하시겠습니까?</string>

    <string name="permission_storage_message">저장소 권한이 거부되어 있습니다. 앱 환경설정에서 권한을 허용해주세요."</string>
    <string name="permission_dialog_rational_title">권한요청</string>
    <string name="permission_dialog_rational_positive_text">환경설정 바로가기</string>
    <string name="permission_dialog_rational_negative_text">취소</string>

    <string name="transition_reveal_write">transition_reveal_write</string>
    <string name="transition_image_detail">transition_image_detail</string>
    <string name="main_title_dashboard">홈</string>
    <string name="main_title_calendar">달력</string>
    <string name="main_title_settings">설정</string>

    <string name="setting_switch_push">푸쉬알림 On/Off</string>

    <string name="ad_app_id">ca-app-pub-7013713714750259~9349926320</string>
    <string name="ad_unit_id">ca-app-pub-7013713714750259/4780125920</string>

</resources>
