<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_write"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/write_button_ok_text" />

    <!-- 플로팅 버튼이 리빌되면서 사라지는 배경 -->
    <RelativeLayout
        android:id="@+id/rl_write_reveal_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- shared elements transition을 위한 뷰 -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_create_white_24dp"
            android:transitionName="@string/transition_reveal_write"
            app:elevation="0dp"
            app:fabSize="normal" />

        <!-- 플로팅 버튼이 리빌되면서 보이는 배경 -->
        <LinearLayout
            android:id="@+id/ll_write_reveal_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="invisible">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="4dp">
                <!-- 갤러리로 이동 및 사진을 가져올떄 사용하는 뷰 -->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_img_icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_img_icon"
                        android:layout_marginTop="8dp"
                        android:text="사진을 올려주세요."
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </android.support.v7.widget.CardView>


            <!-- 컨텐츠 입력을 위한 뷰 -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="start|top"
                            android:hint="@string/write_content_hint"
                            android:paddingTop="6dp"
                            android:paddingBottom="16dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>